// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loading > スナップショット > children なしの HTML 構造 1`] = `null`;

exports[`Loading > スナップショット > loading=false の HTML 構造 1`] = `
<div>
  コンテンツ
</div>
`;

exports[`Loading > スナップショット > loading=true の HTML 構造 1`] = `
<div
  aria-busy="true"
  aria-live="polite"
  class="flex justify-center items-center h-64"
  role="status"
>
  <div
    class="animate-spin rounded-full h-12 w-12 border-t-4 border-blue-500 border-solid"
  />
  <span
    class="sr-only"
  >
    読み込み中
  </span>
</div>
`;

exports[`Loading > スナップショット > カスタム loadingText の HTML 構造 1`] = `
<div
  aria-busy="true"
  aria-live="polite"
  class="flex justify-center items-center h-64"
  role="status"
>
  <div
    class="animate-spin rounded-full h-12 w-12 border-t-4 border-blue-500 border-solid"
  />
  <span
    class="sr-only"
  >
    処理中...
  </span>
</div>
`;
